--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint",
     "lint": "expo lint"
   },
   "dependencies": {
@@ -44,7 +43,9 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-webview": "^13.16.0",
+    "react-native-worklets": "0.5.1",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
